--- a/deadline.html
+++ b/deadline.html
@@ -1,9 +1,7 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="../compiled/flipclock.css">
-
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
+		<link rel="stylesheet" href="/css/flipclock.css">
+		<script src="/js/Jquery.min.js"></script>
 		<script src="/js/flipclock.js"></script>
 		<style>
 
