breadcrumbs page update

--- a/en/breadcrumbs-collection.html
+++ b/en/breadcrumbs-collection.html
@@ -8,7 +8,7 @@
             Dummy Folder Structure
     </title>
     
-            <link rel="stylesheet" href="../Common/css/style.css?v=70">
+            <link rel="stylesheet" href="../Common/css/style.css?v=30">
 </head>
 <body class="en">
 
@@ -26,7 +26,7 @@
                 <ul class="breadcrumbs-1 disable-last-link">
                     <li><a href="javascript:void(0)">Link1</a></li>
                     <li><a href="javascript:void(0)">Link2</a></li>
-                    <li><a href="javascript:void(0)">Link3</a></li>
+                    <li><a href="https://www.google.com">Link3</a></li>
                 </ul>
             </div>
             <div class="mb-20">
@@ -34,7 +34,7 @@
                 <ul class="breadcrumbs-2 disable-last-link-2">
                     <li><a href="javascript:void(0)">Link1</a></li>
                     <li><a href="javascript:void(0)">Link2</a></li>
-                    <li><a href="javascript:void(0)">Link3</a></li>
+                    <li><a href="https://www.google.com">Link3</a></li>
                 </ul>
             </div>
         </div>
